# curv-cot-harness

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/: settings.json
AGENT/: 1768942775-in.md  1768942775-out.md  1768947142-in.md  1768947142-out.md  1768975929-in.md  1768975929-out.md  1769000981-in.md  1769000981-out.md  1769012484-in.md  1769028035-out.md  1770932817-in.md  1771003915-out.md  1771006060-in.md  1771006206-in.md  1771010780-out.md
docs/: design.md  exp007_dataset_notes.md
eval/datasets/: arithmetic-60.jsonl  exp005_README.md  exp005_causal.jsonl  exp005_commonsense.jsonl  exp005_distractor.jsonl  exp005_explanation.jsonl  exp007_adversarial.jsonl
eval/results/v0.1.0-baseline-singletrace-20260120/: config.json  manifest.json  metrics.jsonl  report.md  summary.json
eval/results/v0.1.1-baseline-multitarget-claude-20260120/: config.json  manifest.json  metrics.jsonl  report.md  summary.json
eval/results/v0.1.2-baseline-multitarget-claude-plus-gpt52-20260120/: config.json  manifest.json  metrics.jsonl  report.md  summary.json
eval/results/v0.1.3-trace-corruption-stress-20260121/: config.json  manifest.json  metrics.jsonl  report.md  summary.json
eval/results/v0.1.4-semantic-ambiguity-stress-20260121/: config.json  manifest.json  (+2 more)
scripts/: gen_adversarial_dataset.py  gen_dataset.py  gen_semantic_datasets.py  run_adversarial_trace.py  run_baseline.py  run_causal_replication.py  run_semantic_stress.py  run_trace_corruption.py
src/: __init__.py
src/harness/: __init__.py  metrics.py  models.py  prompts.py  runners.py  traces.py
(+111 files in other folders)
