[project]
name = "curv-cot-harness"
version = "0.1.0"
description = "Experimental harness for evaluating cross-model transfer of reasoning traces"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"
